--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,60 @@
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+
+    <style>
+      /* TODO: move to application style sheet */
+      html {
+          background: radial-gradient(ellipse at top left, #94daf7, #fadcec) no-repeat center center fixed;
+          background-size: cover;
+      }
+
+      html, body {
+          height: 100%;
+          margin: 0;
+          padding: 0;
+          overflow: auto;
+      }
+
+      #logo {
+          overflow: auto;
+          height: calc(100% - 64px);
+      }
+
+      #nav {
+          height: 64px;
+          border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+          backdrop-filter: blur(10px);
+      }
+
+      #login-button {
+          background-size: 25%;
+          background-position: -1px center;
+          background-clip: padding-box;
+          overflow: hidden;
+          background-repeat: no-repeat;
+          background-image: url(<%= image_url "login-arrow.svg" %>)
+      }
+    </style>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class="block">
+    <header id="logo" class="container flex w-full items-end py-8 px-8">
+      <%= image_tag "thalialogo.svg", width: "25%" %>
+      <%= image_tag "largelogo.svg", width: "75%" %>
+    </header>
+    <nav id="nav" class="flex flex-row justify-between top-0 sticky w-full py-2 px-2">
+      <div class="flex grow flex-row justify-start gap-4">
+        <%= link_to "Home",             root_url,     class: "block bg-[#E82F90CC] rounded-full px-8 py-3 text-white" %>
+        <%= link_to "Programme",        speakers_url, class: "block bg-[#B04EA7CC] rounded-full px-8 py-3 text-white" %>
+        <%= link_to "Sponsors",         sponsors_url, class: "block bg-[#6C72C2CC] rounded-full px-8 py-3 text-white" %>
+        <%= link_to "Get Your Ticket!", sponsors_url, class: "block bg-[#0FAEEECC] rounded-full px-8 py-3 text-white" %>
+      </div>
+      <div class="flex-none">
+        <%= link_to "Log In", sponsors_url, id: "login-button", class: "block bg-[#222222CC] rounded-full py-3 pl-10 pr-6 text-white" %>
+      </div>
+    </nav>
+    <main class="container flex">
       <%= yield %>
     </main>
   </body>
