--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,9 +46,9 @@
   </head>
 
   <body class="block">
-    <header id="logo" class="container flex w-full items-end py-8 px-8">
-      <%= image_tag "thalialogo.svg", width: "25%" %>
-      <%= image_tag "largelogo.svg", width: "75%" %>
+    <header id="logo" class="flex w-full items-end py-8 px-8">
+      <%= image_tag "thalialogo.svg", "width": "25%" %>
+      <%= image_tag "largelogo.svg", "width": "75%" %>
     </header>
     <nav id="nav" class="flex flex-row justify-between top-0 sticky w-full py-2 px-2">
       <div class="flex grow flex-row justify-start gap-4">
