--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,11 +25,9 @@
 
       #logo {
           overflow: auto;
-          height: calc(100% - 64px);
       }
 
       #nav {
-          height: 64px;
           border-bottom: 1px solid rgba(255, 255, 255, 0.3);
           backdrop-filter: blur(10px);
       }
@@ -62,43 +60,65 @@
       });
 
       function toggleMenu(event) {
-          let classes = document.getElementById("nav-items-expanded").classList;
-          menuOpen = classes.contains("hidden");
-          if (classes.contains("hidden")) classes.remove("hidden");
-          else classes.add("hidden");
+          let original = document.getElementById("nav").classList;
+          let logo = document.getElementById("logo").classList;
+          let container = document.getElementById("nav-container").classList;
+          let expanded = document.getElementById("nav-items-expanded").classList;
+          menuOpen = expanded.contains("hidden");
+          if (expanded.contains("hidden")) {
+              expanded.remove("hidden");
+              original.add("hidden");
+              container.remove("h-[64px]");
+              container.add("h-[192px]");
+              logo.remove("h-[calc(100%-64px)]");
+              logo.add("h-[calc(100%-192px)]");
+          }
+          else {
+              expanded.add("hidden");
+              original.remove("hidden");
+              container.remove("h-[192px]");
+              container.add("h-[64px]");
+              logo.remove("h-[calc(100%-192px)]");
+              logo.add("h-[calc(100%-64px)]");
+          }
           event.stopPropagation();
       }
     </script>
   </head>
 
   <body class="block">
-    <header id="logo" class="w-full lg:items-end py-8 px-8 lg:grid lg:grid-cols-[1fr_2.46fr]">
+    <header id="logo" class="w-full lg:items-end py-8 px-8 lg:grid lg:grid-cols-[1fr_2.46fr] h-[calc(100%-64px)]">
       <%= image_tag "thalialogo.svg", class: "w-1/3 lg:w-full" %>
       <%= image_tag "largelogo.svg", width: "100%", class: "mt-8 lg:m-0" %>
     </header>
-    <nav id="nav" class="flex flex-row justify-between top-0 sticky w-full py-2 px-2">
-      <div class="md:hidden flex grow flex-row justify-start gap-4">
-        <button id="menu-button" class="block bg-[#E82F90CC] rounded-full px-3 py-3 text-white">
-          <%= image_tag "hamburger.svg", class: "w-6" %>
-        </button>
+    <nav id="nav-container" class="h-[64px] sticky w-full top-0">
+      <div id="nav" class="flex flex-row justify-between w-full py-2 px-2">
+        <div class="md:hidden flex grow flex-row justify-start gap-4">
+          <button id="menu-button" class="block bg-[#E82F90CC] rounded-full px-3 py-3 text-white">
+            <%= image_tag "hamburger.svg", class: "w-6" %>
+          </button>
+        </div>
+        <ul id="nav-items" class="max-md:hidden flex grow flex-row justify-start gap-4">
+          <%= link_to "Home",             root_url,     class: "block bg-[#E82F90CC] rounded-full px-8 py-3 text-white" %>
+          <%= link_to "Programme",        speakers_url, class: "block bg-[#B04EA7CC] rounded-full px-8 py-3 text-white" %>
+          <%= link_to "Sponsors",         sponsors_url, class: "block bg-[#6C72C2CC] rounded-full px-8 py-3 text-white" %>
+          <%= link_to "Get Your Ticket!", sponsors_url, class: "block bg-[#0FAEEECC] rounded-full px-8 py-3 text-white" %>
+        </ul>
+        <div class="flex-none">
+          <%= link_to "Log In", sponsors_url, id: "login-button", class: "block bg-[#222222CC] rounded-full py-3 pl-10 pr-6 text-white" %>
+        </div>
       </div>
-      <ul id="nav-items" class="max-md:hidden flex grow flex-row justify-start gap-4">
-        <%= link_to "Home",             root_url,     class: "block bg-[#E82F90CC] rounded-full px-8 py-3 text-white" %>
-        <%= link_to "Programme",        speakers_url, class: "block bg-[#B04EA7CC] rounded-full px-8 py-3 text-white" %>
-        <%= link_to "Sponsors",         sponsors_url, class: "block bg-[#6C72C2CC] rounded-full px-8 py-3 text-white" %>
-        <%= link_to "Get Your Ticket!", sponsors_url, class: "block bg-[#0FAEEECC] rounded-full px-8 py-3 text-white" %>
-      </ul>
-      <ul id="nav-items-expanded" class="w-full hidden fixed left-0 bottom-0 flex grow flex-col justify-end m-0 bg-white">
+      <ul id="nav-items-expanded" class="w-full hidden flex flex-col justify-end m-0 bg-white">
         <%= link_to "Home",             root_url,     class: "block bg-[#E82F90CC] px-8 py-3 text-white" %>
         <%= link_to "Programme",        speakers_url, class: "block bg-[#B04EA7CC] px-8 py-3 text-white" %>
         <%= link_to "Sponsors",         sponsors_url, class: "block bg-[#6C72C2CC] px-8 py-3 text-white" %>
         <%= link_to "Get Your Ticket!", sponsors_url, class: "block bg-[#0FAEEECC] px-8 py-3 text-white" %>
       </ul>
-      <div class="flex-none">
-        <%= link_to "Log In", sponsors_url, id: "login-button", class: "block bg-[#222222CC] rounded-full py-3 pl-10 pr-6 text-white" %>
-      </div>
     </nav>
     <main class="container flex">
+      <p>
+        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />       asdfasdfasdff<br />
+      </p>
       <%= yield %>
     </main>
   </body>
