--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,10 +40,6 @@
           background-repeat: no-repeat;
           background-image: url(<%= image_url "login-arrow.svg" %>)
       }
-
-      .menu-mobile {
-
-      }
     </style>
 
     <script>
@@ -87,10 +83,12 @@
   </head>
 
   <body class="block">
-    <header id="logo" class="w-full lg:items-end py-8 px-8 lg:grid lg:grid-cols-[1fr_2.46fr] h-[calc(100%-64px)]">
-      <%= image_tag "thalialogo.svg", class: "w-1/3 lg:w-full" %>
-      <%= image_tag "largelogo.svg", width: "100%", class: "mt-8 lg:m-0" %>
-    </header>
+    <% if current_page?(root_path) %>
+      <header id="logo" class="w-full lg:items-end py-8 px-8 lg:grid lg:grid-cols-[1fr_2.46fr] h-[calc(100%-64px)]">
+        <%= image_tag "thalialogo.svg", class: "w-1/3 lg:w-full" %>
+        <%= image_tag "largelogo.svg", width: "100%", class: "mt-8 lg:m-0" %>
+      </header>
+    <% end %>
     <nav id="nav-container" class="h-[64px] sticky w-full top-0">
       <div id="nav" class="flex flex-row justify-between w-full py-2 px-2">
         <div class="md:hidden flex grow flex-row justify-start gap-4">
@@ -116,9 +114,6 @@
       </ul>
     </nav>
     <main class="container flex">
-      <p>
-        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />        asdfasdfasdff<br />       asdfasdfasdff<br />
-      </p>
       <%= yield %>
     </main>
   </body>
