--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,7 +113,7 @@
         <%= link_to "Get Your Ticket!", sponsors_url, class: "block bg-[#0FAEEECC] px-8 py-3 text-white" %>
       </ul>
     </nav>
-    <main class="container flex">
+    <main class="w-full">
       <%= yield %>
     </main>
   </body>
