--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,1 +1,5 @@
-<h1>To Be Added Later.</h1>
+<div class="container mx-auto w-full pt-32 min-h-screen">
+  <h1 class="text-5xl font-bold">
+    Thalia's symposium is back!
+  </h1>
+</div>
