Nice content on the main page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,7 @@
         <%= image_tag "largelogo.svg", width: "100%", class: "mt-8 lg:m-0" %>
       </header>
     <% end %>
-    <nav id="nav-container" class="h-[64px] sticky w-full top-0">
+    <nav id="nav-container" class="h-[64px] sticky w-full top-0 z-50">
       <div id="nav" class="flex flex-row justify-between w-full py-2 px-2">
         <div class="md:hidden flex grow flex-row justify-start gap-4">
           <button id="menu-button" class="block bg-[#E82F90CC] rounded-full px-3 py-3 text-white">
