--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,5 +1,54 @@
-<div class="container mx-auto w-full pt-32 min-h-screen">
+<div class="container mx-auto w-full mt-32 min-h-screen bg-white p-16 rounded-2xl drop-shadow-2xl z-0">
   <h1 class="text-5xl font-bold">
-    Thalia's symposium is back!
+    Thalia Symposium 2023: Performance Optimization
   </h1>
+
+  <p class="pt-8 max-md:text-lg md:text-2xl">
+    After a long wait, the annual Thalia Symposium is here. On the 19th of April 2023, we will be organizing a symposium on performance optimization, with talks on subjects like High Performance Computing and more! The event will be held in Theatre Hall C of the EOS building, and sign ups will open be open for Thalia members from the 16th of March until the 24th of March. After that, sign ups will open up right here for non-Thalia members.<br /><br />
+    The event will be from 10:00 to 16:30, and will be followed by a borrel. There will be parallel tracks, so soon you will be able to sign up for the specific talks you want to attend. <br /><br />
+    The exact schedule will be announced soon, but until that time keep checking in on the website because we will be posting more information on our speakers in the coming weeks. <br /><br />
+    <span class="italic">We hope to see you there!</span>
+  </p>
+
+  <div class="w-full flex flex-col lg:flex-row gap-16 pt-16">
+    <div class="container flex flex-col items-center bg-[#06AAED] rounded-2xl p-6 text-white shadow-inner text-xl">
+      <div class="flex flex-row mb-2">
+        <%= image_tag "account-plus.svg", class: "w-8 invert mr-2" %> <span class="font-bold pt-1">Registrations</span>
+      </div>
+      <div class="flex flex-1 items-center">
+        <span class="text-center">
+          <a href="https://thalia.nu/events/1009" class="underline">Opens for Thalians on Thu 16 Mar 2023, 13:00</a> <br />
+          Opens later for non-Thalians
+        </span>
+      </div>
+    </div>
+
+    <div class="container flex flex-col items-center bg-[#935DB2] rounded-2xl p-6 text-white shadow-inner text-xl">
+      <div class="flex flex-row mb-2">
+        <%= image_tag "clock-time-ten-outline.svg", class: "w-8 invert mr-2" %> <span class="font-bold pt-1">When</span>
+      </div>
+      <div class="flex flex-1 items-center">
+        <span class="text-center">
+          April 19th 2023 <br />
+          10:00 &mdash; 16:30
+        </span>
+      </div>
+    </div>
+
+    <div class="container flex flex-col items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">
+      <div class="flex flex-row mb-2">
+        <%= image_tag "map-marker.svg", class: "w-8 invert mr-2" %> <span class="font-bold pt-1">Location</span>
+      </div>
+      <div class="flex flex-1 items-center">
+        <a href="https://www.google.com/maps/place/Heyendaalseweg+141%2C+Nijmegen" class="text-center">
+          <address>
+            Theatre Hall C<br />
+            Elinor Ostromgebouw <br />
+            Heyendaalseweg 141 <br />
+            6525 AJ Nijmegen
+          </address>
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
