Add contact details

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto w-full mt-32 min-h-screen bg-white p-16 rounded-2xl drop-shadow-2xl z-0">
+<div class="container mx-auto w-full my-16 min-h-screen bg-white p-16 rounded-2xl drop-shadow-2xl z-0">
   <h1 class="text-5xl font-bold">
     Thalia Symposium 2023: Performance Optimization
   </h1>
@@ -50,5 +50,21 @@
         </a>
       </div>
     </div>
+  </div>
+
+  <div class="text-lg text-center w-full">
+    <h2 class="text-3xl mt-8 font-bold">Contact</h2>
+    <h3 class="text-xl mt-2 font-bold">Email</h3>
+    <a href="mailto:symposium@thalia.nu">
+      <address>symposium@thalia.nu</address>
+    </a>
+    <h3 class="text-xl mt-1 font-bold">Visiting Address</h3>
+    <a href="https://www.google.com/maps/place/Toernooiveld+212%2C+Nijmegen">
+      <address>
+        Toernooiveld 212 <br />
+        6525 EC Nijmegen <br />
+        Board room: M1.0.08 (ground floor)
+      </address>
+    </a>
   </div>
 </div>
