Make the site look nicer on mobile

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto w-full my-16 min-h-screen bg-white p-16 rounded-2xl drop-shadow-2xl z-0">
+<div class="container mx-auto w-full my-16 min-h-screen bg-white py-16 px-8 md:px-16 rounded-2xl drop-shadow-2xl z-0">
   <h1 class="text-5xl font-bold">
     Thalia Symposium 2023: Performance Optimization
   </h1>
