--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -4,7 +4,7 @@
   </h1>
 
   <p class="pt-8 max-md:text-lg md:text-2xl">
-    After a long wait, the annual Thalia Symposium is here. On the 19th of April 2023, we will be organizing a symposium on performance optimization, with talks on subjects like High Performance Computing and more! The event will be held in Theatre Hall C of the EOS building, and sign ups will open be open for Thalia members from the 16th of March until the 24th of March. After that, sign ups will open up right here for non-Thalia members.<br /><br />
+    After a long wait, the annual Thalia Symposium is here. On the 19<sup>th</sup> of April 2023, we will be organizing a symposium on performance optimization, with talks on subjects like High Performance Computing and more! The event will be held in Theatre Hall C of the EOS building, and sign ups will open be open for Thalia members from the 16th of March until the 24th of March. After that, sign ups will open up right here for non-Thalia members.<br /><br />
     The event will be from 10:00 to 16:30, and will be followed by a borrel. There will be parallel tracks, so soon you will be able to sign up for the specific talks you want to attend. <br /><br />
     The exact schedule will be announced soon, but until that time keep checking in on the website because we will be posting more information on our speakers in the coming weeks. <br /><br />
     <span class="italic">We hope to see you there!</span>
@@ -29,7 +29,7 @@
       </div>
       <div class="flex flex-1 items-center">
         <span class="text-center">
-          April 19th 2023 <br />
+          April 19<sup>th</sup> 2023 <br />
           10:00 &mdash; 16:30
         </span>
       </div>
