--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,20 +97,20 @@
           </button>
         </div>
         <ul id="nav-items" class="max-md:hidden flex grow flex-row justify-start gap-4">
-          <%= link_to "Home",             root_url,     class: "block bg-[#E82F90CC] rounded-full px-8 py-3 text-white" %>
-          <%= link_to "Programme",        speakers_url, class: "block bg-[#B04EA7CC] rounded-full px-8 py-3 text-white" %>
-          <%= link_to "Sponsors",         sponsors_url, class: "block bg-[#6C72C2CC] rounded-full px-8 py-3 text-white" %>
-          <%= link_to "Get Your Ticket!", sponsors_url, class: "block bg-[#0FAEEECC] rounded-full px-8 py-3 text-white" %>
+          <%= link_to "Home",             root_url,     class: "block bg-[#E82F90CC] rounded-full font-medium px-8 py-3 text-white" %>
+          <%= link_to "Programme",        speakers_url, class: "block bg-[#B04EA7CC] rounded-full font-medium px-8 py-3 text-white" %>
+          <%= link_to "Sponsors",         sponsors_url, class: "block bg-[#6C72C2CC] rounded-full font-medium px-8 py-3 text-white" %>
+          <%= link_to "Get Your Ticket!", sponsors_url, class: "block bg-[#0FAEEECC] rounded-full font-medium px-8 py-3 text-white" %>
         </ul>
         <div class="flex-none">
-          <%= link_to "Log In", sponsors_url, id: "login-button", class: "block bg-[#222222CC] rounded-full py-3 pl-10 pr-6 text-white" %>
+          <%= link_to "Log In", sponsors_url, id: "login-button", class: "block bg-[#222222CC] rounded-full font-medium py-3 pl-10 pr-6 text-white" %>
         </div>
       </div>
       <ul id="nav-items-expanded" class="w-full hidden flex flex-col justify-end m-0 bg-white">
-        <%= link_to "Home",             root_url,     class: "block bg-[#E82F90CC] px-8 py-3 text-white" %>
-        <%= link_to "Programme",        speakers_url, class: "block bg-[#B04EA7CC] px-8 py-3 text-white" %>
-        <%= link_to "Sponsors",         sponsors_url, class: "block bg-[#6C72C2CC] px-8 py-3 text-white" %>
-        <%= link_to "Get Your Ticket!", sponsors_url, class: "block bg-[#0FAEEECC] px-8 py-3 text-white" %>
+        <%= link_to "Home",             root_url,     class: "block bg-[#E82F90CC] px-8 py-3 font-medium text-white" %>
+        <%= link_to "Programme",        speakers_url, class: "block bg-[#B04EA7CC] px-8 py-3 font-medium text-white" %>
+        <%= link_to "Sponsors",         sponsors_url, class: "block bg-[#6C72C2CC] px-8 py-3 font-medium text-white" %>
+        <%= link_to "Get Your Ticket!", sponsors_url, class: "block bg-[#0FAEEECC] px-8 py-3 font-medium text-white" %>
       </ul>
     </nav>
     <main class="w-full">
