--- a/app/views/speakers/index.html.erb
+++ b/app/views/speakers/index.html.erb
@@ -3,11 +3,16 @@
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Speakers</h1>
+  <div class="container pt-8 mx-auto w-full">
+    <h1 class="font-bold text-6xl italic bg-yellow-400 text-black w-fit">Speakers</h1>
+    <div class="container w-full bg-white p-8 shadow-lg text-lg font-medium">
+      We aslkdjflasjkdflajsdfljasdklfjaksdf
+      The schedule balblablablablablalblabll
+      JEROEN, verzin itests leuks :)
+    </div>
   </div>
 
-  <div id="speakers" class="min-w-full">
+  <div id="speakers-grid" class="flex flex-col gap-8 container mx-auto w-full my-16 min-h-screen">
     <%= render @speakers %>
   </div>
 </div>
