--- a/app/views/speakers/index.html.erb
+++ b/app/views/speakers/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="container pt-8 mx-auto w-full">
     <h1 class="font-bold text-6xl italic bg-yellow-400 text-black w-fit">Speakers</h1>
-    <div class="container w-full bg-white p-8 shadow-lg text-lg font-medium">
+    <div class="container w-full bg-white p-4 md:p-8 shadow-lg text-lg font-medium">
       We aslkdjflasjkdflajsdfljasdklfjaksdf
       The schedule balblablablablablalblabll
       JEROEN, verzin itests leuks :)
