feat: Text! Explanation of speakers / sponsors tab

--- a/app/views/speakers/index.html.erb
+++ b/app/views/speakers/index.html.erb
@@ -7,7 +7,9 @@
     <h1 class="font-bold text-6xl italic text-black w-fit">Speakers</h1>
     <br>
     <div class="container w-full bg-white p-4 md:p-8 shadow-lg text-lg font-medium lg:rounded-2xl">
-      #TD: Verzien iets leuks
+      Before presenting the full schedule, we would like to introduce this years' speakers. <br>
+      A short introduction about each speaker is provided, just like a preview of what they will be presenting at the symposium. <br>
+      This list is not yet complete, so make sure to check back later for more updates on the speakers!
     </div>
   </div>
 
