--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -7,7 +7,7 @@
     <h1 class="font-bold text-6xl italic text-black w-fit">Sponsors</h1>
     <br>
     <div class="container w-full bg-white p-4 md:p-8 shadow-lg text-lg font-medium lg:rounded-2xl">
-      #TD: Verzien iets leuks
+      Our symposium wouldn't be possible without the generous help of our sponsors! Listed below are the companies that have helped make this event possible.
     </div>
   </div>
 
