--- a/app/views/sponsors/_sponsor.html.erb
+++ b/app/views/sponsors/_sponsor.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id sponsor %>" class="speaker flex bg-white lg:rounded-2xl lg:odd:mr-[20%] lg:even:ml-[20%] odd:pl-[25%] lg:odd:pl-[20%] even:pr-[25%] lg:even:pr-[20%] drop-shadow-lg w-100%">
   <div class="w-[100%] p-4 md:p-8">
     <h2 class="text-xl md:text-3xl font-black"><%= sponsor.title %></h2>
-    <p><%= sponsor.body %></p>
+    <p><%= sponsor.body %><%= link_to  sponsor.link, sponsor.link %></p>
   </div>
 
   <% #if action_name != "show" %>
@@ -10,7 +10,7 @@
   <% #end %>
 
   <style>
-    .speaker {
+    #<%= dom_id sponsor %> {
       background-image: url("<%= image_url sponsor.image %>");
     }
   </style>
