--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,62 @@
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+
+    <script>
+      let menuOpen = false;
+
+      window.addEventListener("click", function(event) {
+          if (menuOpen) {
+              toggleMenu(event);
+          }
+      });
+
+      window.addEventListener("load", function() {
+          document.getElementById("menu-button").addEventListener("click", toggleMenu);
+      });
+
+      function toggleMenu(event) {
+          let original = document.getElementById("nav").classList;
+          let logo = document.getElementById("logo");
+          let container = document.getElementById("nav-container").classList;
+          let expanded = document.getElementById("nav-items-expanded").classList;
+          menuOpen = expanded.contains("hidden");
+          if (expanded.contains("hidden")) {
+              expanded.remove("hidden");
+              original.add("hidden");
+              container.remove("h-[64px]");
+              container.add("h-[192px]");
+              if (logo) {
+                  logo.classList.remove("h-[calc(100%-64px)]");
+                  logo.classList.add("h-[calc(100%-192px)]");
+              }
+          }
+          else {
+              expanded.add("hidden");
+              original.remove("hidden");
+              container.remove("h-[192px]");
+              container.add("h-[64px]");
+              if (logo) {
+                  logo.classList.remove("h-[calc(100%-192px)]");
+                  logo.classList.add("h-[calc(100%-64px)]");
+              }
+          }
+          event.stopPropagation();
+      }
+    </script>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class="block">
+    <% if current_page?(root_path) %>
+      <header id="logo" class="w-full lg:items-end py-8 px-8 lg:grid lg:grid-cols-[1fr_2.46fr] h-[calc(100%-64px)]">
+        <%= image_tag "thalialogo.svg", class: "w-1/3 lg:w-full" %>
+        <%= image_tag "largelogo.svg", width: "100%", class: "mt-8 lg:m-0" %>
+      </header>
+    <% end %>
+    <%= render 'layouts/navbar' %>
+    <main class="w-full">
       <%= yield %>
     </main>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
