First bits of speaker info && fix for navbar
chore: seeding data

feat: First 2 speakers!

fix: Temporarily hardlink to thalia events page

--- a/app/views/speakers/_speaker.html.erb
+++ b/app/views/speakers/_speaker.html.erb
@@ -8,4 +8,10 @@
     <% #link_to "Show this speaker", speaker, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <% # link_to 'Edit this speaker', edit_speaker_path(speaker), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
   <% #end %>
+
+  <style>
+    #<%= dom_id speaker %> {
+      background-image: url("<%= image_url speaker.image %>");
+    }
+  </style>
 </div>
