Update location to LUX

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -40,12 +40,11 @@
         <%= image_tag "map-marker.svg", class: "w-8 invert mr-2" %> <span class="font-bold pt-1">Location</span>
       </div>
       <div class="flex flex-1 items-center">
-        <a href="https://www.google.com/maps/place/Heyendaalseweg+141%2C+Nijmegen" class="text-center">
+        <a href="https://goo.gl/maps/ECwxZ3kHqDjQLsKB6" class="text-center">
           <address>
-            Theatre Hall C<br />
-            Elinor Ostromgebouw <br />
-            Heyendaalseweg 141 <br />
-            6525 AJ Nijmegen
+            LUX<br />
+            Mariënburg 38-39 <br />
+            6511 PS Nijmegen
           </address>
         </a>
       </div>
