feat: Designs for all (non-logged in) devise pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
       </header>
     <% end %>
     <%= render 'layouts/navbar' %>
-    <main class="w-full">
+    <main class="w-full min-h-screen">
       <%= yield %>
     </main>
     <%= render 'layouts/footer' %>
