--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,17 +22,17 @@
       </div>
       <br>
       <div class="field">
-        <%= f.label :last_name, class: "text-xl mt-2 font-bold", class: "mb-2 text-sm font-medium text-gray-900 dark:text-white" %> <br />
+        <%= f.label :last_name, class: "mb-2 text-sm font-medium text-gray-900 dark:text-white" %> <br />
         <%= f.text_field :lastname, autofocus: true, autocomplete: "last_name", class: "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
       </div>
       <br>
       <div class="field">
-        <%= f.label :email, class: "text-xl mt-2 font-bold", class: "mb-2 text-sm font-medium text-gray-900 dark:text-white" %><br />
+        <%= f.label :email, class: "mb-2 text-sm font-medium text-gray-900 dark:text-white" %><br />
         <%= f.email_field :email, autocomplete: "email", class: "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
       </div>
       <br>
       <div class="field">
-        <%= f.label :password, class: "text-xl mt-2 font-bold", class: "mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
+        <%= f.label :password, class: "mb-2 text-sm font-medium text-gray-900 dark:text-white" %>
         <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
@@ -40,7 +40,7 @@
       </div>
       <br>
       <div class="field">
-        <%= f.label :password_confirmation, class: "text-xl mt-2 font-bold", class: "mb-2 text-sm font-medium text-gray-900 dark:text-white" %><br />
+        <%= f.label :password_confirmation, class: "mb-2 text-sm font-medium text-gray-900 dark:text-white" %><br />
         <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
       </div>
       <br>
