--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Resend unlock instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container mx-auto w-full my-16 bg-white py-16 px-8 md:px-16 rounded-2xl drop-shadow-2xl z-0">
+  <h1 class="text-5xl font-bold">
+    Resend Unlock Instructions
+  </h1>
+  <br>
+  <div class="text-lg text-center w-full">
+    <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="field">
+        <%= f.label :email, class: "mb-2 text-sm font-medium text-gray-900 dark:text-white" %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+      </div>
+      <br>
+      <div class="actions">
+        <%= f.submit "Resend unlock instructions", class: "bg-[#E82F90CC] hover:bg-[#E82F90FF] rounded-full font-medium px-8 py-3 text-white" %>
+      </div>
+    <% end %>
+    <br>
+    <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+      Already have a ticket? <%= link_to "Login Here", new_user_session_path, class: "font-medium text-primary-600 hover:underline dark:text-primary-500" %>
+    </p>
+    <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+      Looking to get a ticket? <%= link_to "Reserve one Here", new_user_registration_path, class: "font-medium text-primary-600 hover:underline dark:text-primary-500" %>
+    </p>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
