fix: Link to tickets page on home-page to make more obvious

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -17,8 +17,8 @@
       </div>
       <div class="flex flex-1 items-center">
         <span class="text-center">
-          <a href="https://thalia.nu/events/1009" class="underline">Opens for Thalians on Thu 16 Mar 2023, 13:00</a> <br />
-          Opens later for non-Thalians
+          <a href="https://thalia.nu/events/1009" class="underline">Sign-ups for Thalians are open here!</a> <br />
+          <%= link_to "Non Thalians can get their tickets here!", new_user_registration_path, class: "underline" %>
         </span>
       </div>
     </div>
