--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -7,8 +7,8 @@
     <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
       <div class="field">
-        <%= f.label :email, class: "mb-2 text-sm font-medium text-gray-900 dark:text-white"  %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %>
+        <%= f.label :email, class: "mb-2 text-sm font-medium text-gray-900 "  %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 p-2.5" %>
       </div>
       <br>
       <div class="actions">
@@ -16,11 +16,11 @@
       </div>
     <% end %>
     <br>
-    <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-      Already have a ticket? <%= link_to "Login Here", new_user_session_path, class: "font-medium text-primary-600 hover:underline dark:text-primary-500" %>
+    <p class="text-sm font-light text-gray-500 ">
+      Already have a ticket? <%= link_to "Login Here", new_user_session_path, class: "font-medium text-primary-600 hover:underline " %>
     </p>
-    <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-      Looking to get a ticket? <%= link_to "Reserve one Here", new_user_registration_path, class: "font-medium text-primary-600 hover:underline dark:text-primary-500" %>
+    <p class="text-sm font-light text-gray-500 ">
+      Looking to get a ticket? <%= link_to "Reserve one Here", new_user_registration_path, class: "font-medium text-primary-600 hover:underline " %>
     </p>
   </div>
 </div>
